tests/ui/associated-types/issue-20825.rs
pub trait Subscriber {
    type Input;
}

pub trait Processor: Subscriber<Input = Self::Input> {
    //~^ ERROR cycle detected
    type Input;
}

fn main() {}
